--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@solidjs/router": "^0.12.4",
     "firebase": "^10.8.1",
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.8.15"
+    "solid-js": "^1.8.15",
+    "solid-slider": "^1.3.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
