--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@solidjs/router": "^0.12.4",
     "firebase": "^10.8.1",
     "solid-icons": "^1.1.0",
+    "cookiejs": "^2.1.2",
     "solid-js": "^1.8.15",
     "solid-slider": "^1.3.17"
   },
